--- a/package.json
+++ b/package.json
@@ -10,13 +10,16 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
-    "express": "^4.18.1",
-    "ts-node-dev": "^2.0.0"
+    "@types/cors": "^2.8.12",
+    "@types/express": "^4.17.13",
+    "@types/node": "^18.7.6",
+    "ts-node-dev": "^2.0.0",
+    "typescript": "^4.7.4"
   },
   "dependencies": {
     "@prisma/client": "^4.2.1",
-    "@types/express": "^4.17.13",
     "cors": "^2.8.5",
+    "express": "^4.18.1",
     "prisma": "^4.2.1"
   }
 }
